# wkhtmltopdf

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
.github/workflows/: build-publish.yaml
app/: main.py  utils.py  wkhtmltopdf.py
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
