
[project]
name = "wkhtmltopdf"
version = "1.1.1"
description = ""
authors = [
    {name = "Daniel Pinto", email = "dmp593@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "pyhumps>=3.8.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
